--- a/index.html
+++ b/index.html
@@ -11,6 +11,28 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <header>
+        <h1 class="text-center text-primary my-3">Your Phone Bazer</h1>
+    </header>
+
+    <main>
+        <!-- search field -->
+        <div class="input-group mb-3 w-50 mx-auto">
+            <input id="search-input" type="text" class="form-control" placeholder="Search your mobile" aria-label="Recipient's username" aria-describedby="button-addon2">
+            <button onclick="" class="btn btn-primary" type="button" id="button-addon2">Search</button>
+        </div>
+
+        <!-- details field -->
+
+        <!-- show field -->
+        <div class="container">
+            <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
+              <div class="col">
+                <div class="p-3 border bg-light">Row column</div>
+              </div>
+            </div>
+          </div>
+    </main>
     
 
 
