load phone detail

--- a/index.html
+++ b/index.html
@@ -23,13 +23,16 @@
         </div>
 
         <!-- details field -->
+        <section id="phone-details">
+            <!--  -->
+        </section>
 
         <!-- show field -->
-        <div class="container py-5">
+        <section class="container py-5">
             <div id="search-result" class="row row-cols-2 row-cols-lg-3 g-2 g-lg-4 ">
                 <!-- here show the search result -->
             </div>
-          </div>
+        </section>
     </main>
     
 
