--- a/index.html
+++ b/index.html
@@ -11,32 +11,30 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- Header section -->
     <header>
         <h1 class="text-center text-primary my-3">Your Phone Bazer</h1>
     </header>
 
     <main>
-        <!-- search field -->
+        <!-- Phone search field -->
         <div class="input-group mb-3 w-50 mx-auto">
             <input id="search-input" type="text" class="form-control" placeholder="Search your mobile" aria-label="Recipient's username" aria-describedby="button-addon2">
             <button onclick="loadPhone()" class="btn btn-primary" type="button" id="button-addon2">Search</button>
         </div>
 
-        <!-- details field -->
+        <!-- Phone details field -->
         <section id="phone-details">
-            <!--  -->
+            <!-- Here show the details of phone -->
         </section>
 
-        <!-- show field -->
+        <!-- Search results field -->
         <section class="container py-5">
-            <div id="search-result" class="row row-cols-2 row-cols-lg-3 g-2 g-lg-4 ">
-                <!-- here show the search result -->
+            <div id="search-result" class="row row-cols-2 row-cols-lg-3 g-2 g-lg-5 ">
+                <!-- Here show the search results of phones -->
             </div>
         </section>
     </main>
-    
-
-
 
     <!-- Bootstrap Js Script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
