--- a/index.html
+++ b/index.html
@@ -5,38 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phone Bazer</title>
-    <!-- Bootstrap Style Sheet -->
+    <!-- Bootstrap Style Sheet CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Custom Style Sheet -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <!-- Header section -->
+    <!-- <<<<<<<<<<<<<<<Header section Start>>>>>>>>>>>>>>> -->
     <header>
         <h1 class="text-center text-primary my-3">Your Phone Bazer</h1>
     </header>
 
     <main>
-        <!-- Phone search field -->
-        <div class="input-group mb-3 w-50 mx-auto">
+        <!-- <<<<<<<<<<<<<<<Phone search field>>>>>>>>>>>>>>> -->
+        <section class="input-group mb-3 w-50 mx-auto">
             <input id="search-input" type="text" class="form-control" placeholder="Search your mobile" aria-label="Recipient's username" aria-describedby="button-addon2">
             <button onclick="loadPhone()" class="btn btn-primary" type="button" id="button-addon2">Search</button>
-        </div>
+        </section>
 
-        <!-- Phone details field -->
+        <!-- <<<<<<<<<<<<<<<Phone details field>>>>>>>>>>>>>>> -->
         <section id="phone-details">
             <!-- Here show the details of phone -->
         </section>
 
-        <!-- Search results field -->
+        <!-- <<<<<<<<<<<<<<<Search results field>>>>>>>>>>>>>>> -->
         <section class="container py-5">
-            <div id="search-result" class="row row-cols-2 row-cols-lg-3 g-2 g-lg-5 ">
+            <div id="search-result" class="row g-4 g-lg-5">
                 <!-- Here show the search results of phones -->
             </div>
         </section>
     </main>
 
-    <!-- Bootstrap Js Script -->
+    <!-- Bootstrap Js Script CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- Custom Js Script -->
     <script src="js/script.js"></script>
