The Phone Bazer

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
     <!-- <<<<<<<<<<<<<<<Header section Start>>>>>>>>>>>>>>> -->
     <header>
-        <h1 class="text-center text-primary my-3">Your Phone Bazer</h1>
+        <h1 class="text-center my-4">Your Phone Bazer</h1>
     </header>
 
     <main>
         <!-- <<<<<<<<<<<<<<<Phone search field>>>>>>>>>>>>>>> -->
         <section class="input-group mb-3 w-50 mx-auto">
             <input id="search-input" type="text" class="form-control" placeholder="Search your mobile" aria-label="Recipient's username" aria-describedby="button-addon2">
-            <button onclick="loadPhone()" class="btn btn-primary" type="button" id="button-addon2">Search</button>
+            <button onclick="loadPhone()" class="btn btn-primary" type="button" id="search-btn">Search</button>
         </section>
 
         <!-- <<<<<<<<<<<<<<<Phone details field>>>>>>>>>>>>>>> -->
@@ -30,7 +30,7 @@
 
         <!-- <<<<<<<<<<<<<<<Search results field>>>>>>>>>>>>>>> -->
         <section class="container py-5">
-            <div id="search-result" class="row g-4 g-lg-5">
+            <div id="search-result" class="row g-4 g-lg-4">
                 <!-- Here show the search results of phones -->
             </div>
         </section>
