The Final Commit Of Phone Bazer

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
             <button onclick="loadPhone()" class="btn btn-primary" type="button" id="search-btn">Search</button>
         </section>
 
+        <!--  -->
+        <section class="text-center">
+            <p id="no-result">Sorry, No Result Found. Try Again</p>
+        </section>
+        
+        
+
         <!-- <<<<<<<<<<<<<<<Phone details field>>>>>>>>>>>>>>> -->
         <section id="phone-details">
             <!-- Here show the details of phone -->
